--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
+  <link href="styles.css" rel="stylesheet"></link>
 </head>
 <body>
-
+  <div class="results-display">Choose your attack!</div>
+  <div class="game-display">
+    <div class="player">
+      <div class="user-title">Player</div>
+      <h1 class="player-choice">Rock</h1>
+      <div class="score">Score: 0</div>
+    </div>
+    <div class="computer">
+      <div class="user-title">Computer</div>
+      <h1 class="computer-choice">Paper</h1>
+      <div class="score">Score: 0</div>
+    </div>
+  </div>
+  <div class="player-input">
+    <button id="rock-btn">Rock</button>
+    <button id="paper-btn">Paper</button>
+    <button id="scissors-btn">Scissors</button>
+  </div>
 </body>
 </html>
