--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <script src="state.js" defer></script>
+  <script src="view.js" defer></script>
   <script src="main.js" defer></script>
   <link href="styles.css" rel="stylesheet"></link>
 </head>
@@ -12,19 +14,19 @@
   <div class="game-display">
     <div class="player">
       <div class="user-title">Player</div>
-      <h1 class="player-choice">Rock</h1>
+      <h1 class="player-choice"></h1>
       <div class="score">Score: 0</div>
     </div>
     <div class="computer">
       <div class="user-title">Computer</div>
-      <h1 class="computer-choice">Paper</h1>
+      <h1 class="computer-choice"></h1>
       <div class="score">Score: 0</div>
     </div>
   </div>
   <div class="player-input">
-    <button id="rock-btn">Rock</button>
-    <button id="paper-btn">Paper</button>
-    <button id="scissors-btn">Scissors</button>
+    <button id="rock-btn" class="choice-btn">Rock</button>
+    <button id="paper-btn" class="choice-btn">Paper</button>
+    <button id="scissors-btn" class="choice-btn">Scissors</button>
   </div>
 </body>
 </html>
